--- a/images/.htaccess
+++ b/images/.htaccess
@@ -16,5 +16,5 @@
 </Files>
 deny from all
 
-ErrorDocument 403 /../index.php
-ErrorDocument 404 /../index.php
+ErrorDocument 403 http://localhost/biomed-ed/includes/access_deny.php
+ErrorDocument 404 http://localhost/biomed-ed/includes/no_exist.php
